InstallNexus/06.NexusService.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  ports:
    - name: nexus-service
      port: 8081
      targetPort: 8081
      nodePort: 32000
  type: NodePort  
  selector: 
    app: nexus-server
