InstallNexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: nginx-service
      port: 80
      targetPort: 80
      nodePort: 31000
  type: NodePort
  selector:
    app: nginx
